--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,14 @@ project(Webby)
 
 set(SOURCES source/ClientSideRequest.cpp
             source/ClientSideResponse.cpp
-            source/RCManager.cpp
             source/RequestBody.cpp
             source/ServerSideRequest.cpp
             source/ServerSideResponse.cpp
-            source/SoapArgs.cpp
             source/URI.cpp
             source/URL.cpp
-            source/WebbyConn.cpp
             source/WebbyException.cpp
-            source/WebbyServer.cpp
-            source/WebbyUtils.cpp)
+            source/WebbyUtils.cpp
+            source/SoapArgs.cpp)
 
 set(WINDOWS_LIBS XSDK)
 set(LINUX_LIBS XSDK)
